Moved memory functions from annotations an into a new header file.

--- a/QGL_Model/QGL_Model.vcxproj
+++ b/QGL_Model/QGL_Model.vcxproj
@@ -142,6 +142,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\annotations.h" />
+    <ClInclude Include="include\Memory\qgl_mem.h" />
+    <ClInclude Include="include\Memory\qgl_mem_tmpl.h" />
     <ClInclude Include="include\Observer-Observable\qgl_callback_observer.h" />
     <ClInclude Include="include\Observer-Observable\qgl_iobserver.h" />
     <ClInclude Include="include\Observer-Observable\qgl_subject.h" />
