Moved platform abstraction code from annotations to a new header file.

--- a/QGL_Model/QGL_Model.vcxproj
+++ b/QGL_Model/QGL_Model.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="include\Observer-Observable\qgl_subject.h" />
     <ClInclude Include="include\qgl_icomponent.h" />
     <ClInclude Include="include\qgl_model_include.h" />
+    <ClInclude Include="include\qgl_platform_abstraction.h" />
     <ClInclude Include="include\qgl_version.h" />
     <ClInclude Include="include\Timing\qgl_timer.h" />
     <ClInclude Include="include\Timing\qgl_time_helpers.h" />
