--- a/QGL_Content/QGL_Content.vcxproj
+++ b/QGL_Content/QGL_Content.vcxproj
@@ -172,7 +172,7 @@
     <ClInclude Include="include\Content-Project\qgl_content_project.h" />
     <ClInclude Include="include\Content-Project\qgl_content_project_compiler.h" />
     <ClInclude Include="include\Content-Store\qgl_content_store.h" />
-    <ClInclude Include="include\Content-Store\qgl_content_store_accessor.h" />
+    <ClInclude Include="include\Content-Store\qgl_content_accessor.h" />
     <ClInclude Include="include\Content-Store\qgl_content_store_config.h" />
     <ClInclude Include="include\File-Loaders\qgl_file_loaders.h" />
     <ClInclude Include="include\File-Loaders\qgl_file_loader_content_store_config.h" />
@@ -189,6 +189,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="QGL_ContentRT.cpp" />
+    <ClCompile Include="qgl_content_accessor.cpp" />
     <ClCompile Include="qgl_content_item.cpp" />
     <ClCompile Include="qgl_content_variant_entry.cpp" />
     <ClCompile Include="qgl_content_file.cpp" />
