--- a/Tests/QGL_Projection.UnitTests/QGL_Projection.UnitTests.csproj
+++ b/Tests/QGL_Projection.UnitTests/QGL_Projection.UnitTests.csproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Content\Content-Metadata\ContentMetadataTests.cs" />
     <Compile Include="Tests\Content\Content-Metadata\ResourceTypeTests.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
