--- a/Tests/QGL_Projection.UnitTests/QGL_Projection.UnitTests.csproj
+++ b/Tests/QGL_Projection.UnitTests/QGL_Projection.UnitTests.csproj
@@ -120,8 +120,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Content\Content-Metadata\ContentLoaderTests.cs" />
     <Compile Include="Tests\Content\Content-Metadata\ContentMetadataTests.cs" />
     <Compile Include="Tests\Content\Content-Metadata\ResourceTypeTests.cs" />
+    <Compile Include="Tests\Content\Content-Project\ContentProjectEntryTests.cs" />
+    <Compile Include="Tests\Content\Content-Project\ContentProjectTests.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
