New interface for a content extension.

--- a/QGL_Projection/QGL_Projection.vcxproj.filters
+++ b/QGL_Projection/QGL_Projection.vcxproj.filters
@@ -77,5 +77,8 @@
     <Midl Include="projections\ContentProjectEntry.idl">
       <Filter>Projections</Filter>
     </Midl>
+    <Midl Include="projections\IContentExtension.idl">
+      <Filter>Projections</Filter>
+    </Midl>
   </ItemGroup>
 </Project>
