--- a/QGL_Projection/QGL_Projection.vcxproj
+++ b/QGL_Projection/QGL_Projection.vcxproj
@@ -174,6 +174,7 @@
     <Midl Include="projections\ContentMetadata.idl" />
     <Midl Include="projections\ContentProject.idl" />
     <Midl Include="projections\ContentProjectEntry.idl" />
+    <Midl Include="projections\IContentExtension.idl" />
     <Midl Include="projections\ResourceType.idl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
